--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,15 +1,243 @@
+<body id="page-top" class="index">
 <div class="container-fluid">
 
   <div class="row">
-  <section id="home" data-type="background" data-speed="10" class="pages">
-      <article></a>
-  </section>
+    <section id="home" data-type="background" data-speed="10" class="pages">
+        <article></a>
+    </section>
+  </div>
+
+  <div class="row">
+    <section id="awards" data-type="background" data-speed="10" class="pages">
+        <article>SPECIAL RECOGNITION</article>
+
+
+    <!-- <section id="portfolio" class="bg-light-gray"> -->
+        <div class="container" id="portfolio">
+            <div class="row awards-list">
+                <div class="col-md-4 col-sm-6 portfolio-item">
+                    <div class="portfolio-link">
+                        <a href="#recogniton" class="portfolio-hover">
+                            <div class="portfolio-hover-content">
+                                <i class="fa fa-plus fa-3x" data-toggle="modal" data-target=".modalOne"></i>
+                            </div>
+                        </a>
+                        <img src="/images/test-photo.png" class="img-responsive" alt="">
+                    </div>
+                    <div class="portfolio-caption">
+                        <h4>Round Icons</h4>
+                        <p class="text-muted">Graphic Design</p>
+                    </div>
+                </div>
+                <div class="col-md-4 col-sm-6 portfolio-item">
+                    <div class="portfolio-link">
+                        <a href="#recogniton" class="portfolio-hover">
+                            <div class="portfolio-hover-content">
+                                <i class="fa fa-plus fa-3x" data-toggle="modal" data-target=".modalTwo"></i>
+                            </div>
+                        </a>
+                        <img src="/images/test-photo.png" class="img-responsive" alt="">
+                    </div>
+                    <div class="portfolio-caption">
+                        <h4>Round Icons</h4>
+                        <p class="text-muted">Graphic Design</p>
+                    </div>
+                </div>
+                <div class="col-md-4 col-sm-6 portfolio-item">
+                    <div class="portfolio-link">
+                        <a href="#recogniton" class="portfolio-hover">
+                            <div class="portfolio-hover-content">
+                                <i class="fa fa-plus fa-3x" data-toggle="modal" data-target=".modalThree"></i>
+                            </div>
+                        </a>
+                        <img src="/images/test-photo.png" class="img-responsive" alt="">
+                    </div>
+                    <div class="portfolio-caption">
+                        <h4>Round Icons</h4>
+                        <p class="text-muted">Graphic Design</p>
+                    </div>
+                </div>
+                <div class="col-md-4 col-sm-6 portfolio-item">
+                    <div class="portfolio-link">
+                        <a href="#recogniton" class="portfolio-hover">
+                            <div class="portfolio-hover-content">
+                                <i class="fa fa-plus fa-3x" data-toggle="modal" data-target=".modalFour"></i>
+                            </div>
+                        </a>
+                        <img src="/images/test-photo.png" class="img-responsive" alt="">
+                    </div>
+                    <div class="portfolio-caption">
+                        <h4>Round Icons</h4>
+                        <p class="text-muted">Graphic Design</p>
+                    </div>
+                </div>
+                <div class="col-md-4 col-sm-6 portfolio-item">
+                    <div class="portfolio-link">
+                        <a href="#recogniton" class="portfolio-hover">
+                            <div class="portfolio-hover-content">
+                                <i class="fa fa-plus fa-3x" data-toggle="modal" data-target=".modalFive"></i>
+                            </div>
+                        </a>
+                        <img src="/images/test-photo.png" class="img-responsive" alt="">
+                    </div>
+                    <div class="portfolio-caption">
+                        <h4>Round Icons</h4>
+                        <p class="text-muted">Graphic Design</p>
+                    </div>
+                </div>
+                <div class="col-md-4 col-sm-6 portfolio-item">
+                    <div class="portfolio-link">
+                        <a href="#recogniton" class="portfolio-hover">
+                            <div class="portfolio-hover-content">
+                                <i class="fa fa-plus fa-3x" data-toggle="modal" data-target=".modalSix"></i>
+                            </div>
+                        </a>
+                        <img src="/images/test-photo.png" class="img-responsive" alt="">
+                    </div>
+                    <div class="portfolio-caption">
+                        <h4>Round Icons</h4>
+                        <p class="text-muted">Graphic Design</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+  </div>
+
 </div>
 
-<div class="row">
-  <section id="awards" data-type="background" data-speed="10" class="pages">
-      <article>SPECIAL RECOGNITION</article>
-  </section>
-</div>
 
-</div>
+
+
+
+
+<!-- MODALS -->
+  <div class="modal fade modalOne" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-lg">
+      <div class="modal-content">
+        <div class="modal-body">
+          <h2>Project Name</h2>
+          <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
+          <img class="img-responsive img-centered" src="img/portfolio/roundicons-free.png" alt="">
+          <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
+          <p>
+              <strong>Want these icons in this portfolio item sample?</strong>You can download 60 of them for free, courtesy of <a href="https://getdpd.com/cart/hoplink/18076?referrer=bvbo4kax5k8ogc">RoundIcons.com</a>, or you can purchase the 1500 icon set <a href="https://getdpd.com/cart/hoplink/18076?referrer=bvbo4kax5k8ogc">here</a>.</p>
+          <ul class="list-inline">
+              <li>Date: July 2014</li>
+              <li>Client: Round Icons</li>
+              <li>Category: Graphic Design</li>
+          </ul>
+          <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="modal fade modalTwo" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-lg">
+      <div class="modal-content">
+        <div class="modal-body">
+          <h2>Project Name Modal 2</h2>
+          <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
+          <img class="img-responsive img-centered" src="img/portfolio/roundicons-free.png" alt="">
+          <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
+          <p>
+              <strong>Want these icons in this portfolio item sample?</strong>You can download 60 of them for free, courtesy of <a href="https://getdpd.com/cart/hoplink/18076?referrer=bvbo4kax5k8ogc">RoundIcons.com</a>, or you can purchase the 1500 icon set <a href="https://getdpd.com/cart/hoplink/18076?referrer=bvbo4kax5k8ogc">here</a>.</p>
+          <ul class="list-inline">
+              <li>Date: July 2014</li>
+              <li>Client: Round Icons</li>
+              <li>Category: Graphic Design</li>
+          </ul>
+          <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="modal fade modalThree" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-lg">
+      <div class="modal-content">
+        <div class="modal-body">
+          <h2>Project Name three</h2>
+          <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
+          <img class="img-responsive img-centered" src="img/portfolio/roundicons-free.png" alt="">
+          <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
+          <p>
+              <strong>Want these icons in this portfolio item sample?</strong>You can download 60 of them for free, courtesy of <a href="https://getdpd.com/cart/hoplink/18076?referrer=bvbo4kax5k8ogc">RoundIcons.com</a>, or you can purchase the 1500 icon set <a href="https://getdpd.com/cart/hoplink/18076?referrer=bvbo4kax5k8ogc">here</a>.</p>
+          <ul class="list-inline">
+              <li>Date: July 2014</li>
+              <li>Client: Round Icons</li>
+              <li>Category: Graphic Design</li>
+          </ul>
+          <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="modal fade modalFour" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-lg">
+      <div class="modal-content">
+        <div class="modal-body">
+          <h2>Project Name four</h2>
+          <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
+          <img class="img-responsive img-centered" src="img/portfolio/roundicons-free.png" alt="">
+          <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
+          <p>
+              <strong>Want these icons in this portfolio item sample?</strong>You can download 60 of them for free, courtesy of <a href="https://getdpd.com/cart/hoplink/18076?referrer=bvbo4kax5k8ogc">RoundIcons.com</a>, or you can purchase the 1500 icon set <a href="https://getdpd.com/cart/hoplink/18076?referrer=bvbo4kax5k8ogc">here</a>.</p>
+          <ul class="list-inline">
+              <li>Date: July 2014</li>
+              <li>Client: Round Icons</li>
+              <li>Category: Graphic Design</li>
+          </ul>
+          <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="modal fade modalFive" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-lg">
+      <div class="modal-content">
+        <div class="modal-body">
+          <h2>Project Name five</h2>
+          <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
+          <img class="img-responsive img-centered" src="img/portfolio/roundicons-free.png" alt="">
+          <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
+          <p>
+              <strong>Want these icons in this portfolio item sample?</strong>You can download 60 of them for free, courtesy of <a href="https://getdpd.com/cart/hoplink/18076?referrer=bvbo4kax5k8ogc">RoundIcons.com</a>, or you can purchase the 1500 icon set <a href="https://getdpd.com/cart/hoplink/18076?referrer=bvbo4kax5k8ogc">here</a>.</p>
+          <ul class="list-inline">
+              <li>Date: July 2014</li>
+              <li>Client: Round Icons</li>
+              <li>Category: Graphic Design</li>
+          </ul>
+          <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="modal fade modalSix" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-lg">
+      <div class="modal-content">
+        <div class="modal-body">
+          <h2>Project Name six</h2>
+          <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
+          <img class="img-responsive img-centered" src="img/portfolio/roundicons-free.png" alt="">
+          <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
+          <p>
+              <strong>Want these icons in this portfolio item sample?</strong>You can download 60 of them for free, courtesy of <a href="https://getdpd.com/cart/hoplink/18076?referrer=bvbo4kax5k8ogc">RoundIcons.com</a>, or you can purchase the 1500 icon set <a href="https://getdpd.com/cart/hoplink/18076?referrer=bvbo4kax5k8ogc">here</a>.</p>
+          <ul class="list-inline">
+              <li>Date: July 2014</li>
+              <li>Client: Round Icons</li>
+              <li>Category: Graphic Design</li>
+          </ul>
+          <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
+
+
+</body>
