--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -7,28 +7,32 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Francois+One" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Dancing+Script" rel="stylesheet">
   </head>
   <body>
 
     <!-- NAVIGATION BAR -->
     <div class="container-fluid">
       <div class="row navbar">
-          <img class="navbar-photo" src="/images/navbar-photo.png">
+          <img class="navbar-photo img-responsive" src="/images/navbar-photo.png">
       </div>
 
 
       <div class="row navbar-links">
-        <div class="photo-position col-lg-3 col-md-3 col-sm-3">
+        <!-- <div class="photo-position col-lg-3 col-md-3 col-sm-3">
           <img class="pig-photo" src="/images/piggys-shadow.png">
-        </div>
-        <div class="col-lg-1">
+        </div> -->
+        <div class="col-lg-1 col-lg-offset-2">
           HOME
         </div>
         <div class="col-lg-1">
           ABOUT US
         </div>
         <div class="col-lg-1">
-          MENU
+          BREAKFAST
+        </div>
+        <div class="col-lg-1">
+          LUNCH
         </div>
         <div class="col-lg-1">
           ICE CREAM
@@ -56,7 +60,7 @@
     src="//code.jquery.com/jquery-3.1.1.min.js"
     integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
     crossorigin="anonymous"></script>
-    
+
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 
 
