--- a/views/index.ejs
+++ b/views/index.ejs
@@ -22,11 +22,11 @@
                                 <i class="fa fa-plus fa-3x" data-toggle="modal" data-target=".modalOne"></i>
                             </div>
                         </a>
-                        <img src="/images/test-photo.png" class="img-responsive" alt="">
+                        <img src="/images/testphoto.png" class="img-responsive" alt="">
+
                     </div>
                     <div class="portfolio-caption">
-                        <h4>Round Icons</h4>
-                        <p class="text-muted">Graphic Design</p>
+                        <span>june 2010</span>
                     </div>
                 </div>
                 <div class="col-md-4 col-sm-6 portfolio-item">
@@ -36,11 +36,10 @@
                                 <i class="fa fa-plus fa-3x" data-toggle="modal" data-target=".modalTwo"></i>
                             </div>
                         </a>
-                        <img src="/images/test-photo.png" class="img-responsive" alt="">
+                        <img src="/images/testphoto.png" class="img-responsive" alt="">
                     </div>
                     <div class="portfolio-caption">
-                        <h4>Round Icons</h4>
-                        <p class="text-muted">Graphic Design</p>
+                        <span>spring 2010</span>
                     </div>
                 </div>
                 <div class="col-md-4 col-sm-6 portfolio-item">
@@ -50,11 +49,10 @@
                                 <i class="fa fa-plus fa-3x" data-toggle="modal" data-target=".modalThree"></i>
                             </div>
                         </a>
-                        <img src="/images/test-photo.png" class="img-responsive" alt="">
+                        <img src="/images/testphoto.png" class="img-responsive" alt="">
                     </div>
                     <div class="portfolio-caption">
-                        <h4>Round Icons</h4>
-                        <p class="text-muted">Graphic Design</p>
+                        <span>february 2010</span>
                     </div>
                 </div>
                 <div class="col-md-4 col-sm-6 portfolio-item">
@@ -64,11 +62,10 @@
                                 <i class="fa fa-plus fa-3x" data-toggle="modal" data-target=".modalFour"></i>
                             </div>
                         </a>
-                        <img src="/images/test-photo.png" class="img-responsive" alt="">
+                        <img src="/images/testphoto.png" class="img-responsive" alt="">
                     </div>
                     <div class="portfolio-caption">
-                        <h4>Round Icons</h4>
-                        <p class="text-muted">Graphic Design</p>
+                        <span>july 2010</span>
                     </div>
                 </div>
                 <div class="col-md-4 col-sm-6 portfolio-item">
@@ -78,11 +75,10 @@
                                 <i class="fa fa-plus fa-3x" data-toggle="modal" data-target=".modalFive"></i>
                             </div>
                         </a>
-                        <img src="/images/test-photo.png" class="img-responsive" alt="">
+                        <img src="/images/award-box5.png" class="img-responsive" alt="">
                     </div>
                     <div class="portfolio-caption">
-                        <h4>Round Icons</h4>
-                        <p class="text-muted">Graphic Design</p>
+                        <span>2010</span>
                     </div>
                 </div>
                 <div class="col-md-4 col-sm-6 portfolio-item">
@@ -92,11 +88,10 @@
                                 <i class="fa fa-plus fa-3x" data-toggle="modal" data-target=".modalSix"></i>
                             </div>
                         </a>
-                        <img src="/images/test-photo.png" class="img-responsive" alt="">
+                        <img src="/images/award-box6.png" class="img-responsive" alt="">
                     </div>
                     <div class="portfolio-caption">
-                        <h4>Round Icons</h4>
-                        <p class="text-muted">Graphic Design</p>
+                        <span>current</span>
                     </div>
                 </div>
             </div>
@@ -116,18 +111,8 @@
     <div class="modal-dialog modal-lg">
       <div class="modal-content">
         <div class="modal-body">
-          <h2>Project Name</h2>
-          <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
-          <img class="img-responsive img-centered" src="img/portfolio/roundicons-free.png" alt="">
-          <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
-          <p>
-              <strong>Want these icons in this portfolio item sample?</strong>You can download 60 of them for free, courtesy of <a href="https://getdpd.com/cart/hoplink/18076?referrer=bvbo4kax5k8ogc">RoundIcons.com</a>, or you can purchase the 1500 icon set <a href="https://getdpd.com/cart/hoplink/18076?referrer=bvbo4kax5k8ogc">here</a>.</p>
-          <ul class="list-inline">
-              <li>Date: July 2014</li>
-              <li>Client: Round Icons</li>
-              <li>Category: Graphic Design</li>
-          </ul>
-          <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
+          <img src="/images/interval-award.jpg">
+          <a href="close"><i class="fa fa-times fa-4x" data-dismiss="modal"></i></a>
         </div>
       </div>
     </div>
