--- a/views/index.ejs
+++ b/views/index.ejs
@@ -22,7 +22,7 @@
                                 <i class="fa fa-plus fa-3x" data-toggle="modal" data-target=".modalOne"></i>
                             </div>
                         </a>
-                        <img src="/images/testphoto.png" class="img-responsive" alt="">
+                        <img src="/images/award-box1.png" class="img-responsive" alt="">
 
                     </div>
                     <div class="portfolio-caption">
@@ -36,7 +36,7 @@
                                 <i class="fa fa-plus fa-3x" data-toggle="modal" data-target=".modalTwo"></i>
                             </div>
                         </a>
-                        <img src="/images/testphoto.png" class="img-responsive" alt="">
+                        <img src="/images/award-box2.png" class="img-responsive" alt="">
                     </div>
                     <div class="portfolio-caption">
                         <span>spring 2010</span>
@@ -49,7 +49,7 @@
                                 <i class="fa fa-plus fa-3x" data-toggle="modal" data-target=".modalThree"></i>
                             </div>
                         </a>
-                        <img src="/images/testphoto.png" class="img-responsive" alt="">
+                        <img src="/images/award-box3.png" class="img-responsive" alt="">
                     </div>
                     <div class="portfolio-caption">
                         <span>february 2010</span>
@@ -62,7 +62,7 @@
                                 <i class="fa fa-plus fa-3x" data-toggle="modal" data-target=".modalFour"></i>
                             </div>
                         </a>
-                        <img src="/images/testphoto.png" class="img-responsive" alt="">
+                        <img src="/images/award-box4.png" class="img-responsive" alt="">
                     </div>
                     <div class="portfolio-caption">
                         <span>july 2010</span>
