--- a/views/index.ejs
+++ b/views/index.ejs
@@ -44,9 +44,9 @@
                 </div>
                 <div class="col-md-4 col-sm-6 portfolio-item">
                     <div class="portfolio-link">
-                        <a href="#recogniton" class="portfolio-hover">
+                        <a href="http://www.nytimes.com/2009/02/13/greathomesanddestinations/13havens.html?pagewanted=1&%2359;s%20Restaurant&%2339&_r=1&sq=Piggy&st=nyt&scp=1" class="portfolio-hover">
                             <div class="portfolio-hover-content">
-                                <i class="fa fa-plus fa-3x" data-toggle="modal" data-target=".modalThree"></i>
+                                <i class="fa fa-plus fa-3x"></i>
                             </div>
                         </a>
                         <img src="/images/award-box3.png" class="img-responsive" alt="">
@@ -83,9 +83,9 @@
                 </div>
                 <div class="col-md-4 col-sm-6 portfolio-item">
                     <div class="portfolio-link">
-                        <a href="#recogniton" class="portfolio-hover">
+                        <a href="http://www.grandparents.com/food-and-leisure/travel/playing-in-the-poconos" class="portfolio-hover">
                             <div class="portfolio-hover-content">
-                                <i class="fa fa-plus fa-3x" data-toggle="modal" data-target=".modalSix"></i>
+                                <i class="fa fa-plus fa-3x"></i>
                             </div>
                         </a>
                         <img src="/images/award-box6.png" class="img-responsive" alt="">
@@ -122,39 +122,8 @@
     <div class="modal-dialog modal-lg">
       <div class="modal-content">
         <div class="modal-body">
-          <h2>Project Name Modal 2</h2>
-          <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
-          <img class="img-responsive img-centered" src="img/portfolio/roundicons-free.png" alt="">
-          <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
-          <p>
-              <strong>Want these icons in this portfolio item sample?</strong>You can download 60 of them for free, courtesy of <a href="https://getdpd.com/cart/hoplink/18076?referrer=bvbo4kax5k8ogc">RoundIcons.com</a>, or you can purchase the 1500 icon set <a href="https://getdpd.com/cart/hoplink/18076?referrer=bvbo4kax5k8ogc">here</a>.</p>
-          <ul class="list-inline">
-              <li>Date: July 2014</li>
-              <li>Client: Round Icons</li>
-              <li>Category: Graphic Design</li>
-          </ul>
-          <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <div class="modal fade modalThree" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
-    <div class="modal-dialog modal-lg">
-      <div class="modal-content">
-        <div class="modal-body">
-          <h2>Project Name three</h2>
-          <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
-          <img class="img-responsive img-centered" src="img/portfolio/roundicons-free.png" alt="">
-          <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
-          <p>
-              <strong>Want these icons in this portfolio item sample?</strong>You can download 60 of them for free, courtesy of <a href="https://getdpd.com/cart/hoplink/18076?referrer=bvbo4kax5k8ogc">RoundIcons.com</a>, or you can purchase the 1500 icon set <a href="https://getdpd.com/cart/hoplink/18076?referrer=bvbo4kax5k8ogc">here</a>.</p>
-          <ul class="list-inline">
-              <li>Date: July 2014</li>
-              <li>Client: Round Icons</li>
-              <li>Category: Graphic Design</li>
-          </ul>
-          <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
+          <img src="/images/fastlane-award.jpg">
+          <a href="close"><i class="fa fa-times fa-4x" data-dismiss="modal"></i></a>
         </div>
       </div>
     </div>
@@ -164,18 +133,8 @@
     <div class="modal-dialog modal-lg">
       <div class="modal-content">
         <div class="modal-body">
-          <h2>Project Name four</h2>
-          <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
-          <img class="img-responsive img-centered" src="img/portfolio/roundicons-free.png" alt="">
-          <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
-          <p>
-              <strong>Want these icons in this portfolio item sample?</strong>You can download 60 of them for free, courtesy of <a href="https://getdpd.com/cart/hoplink/18076?referrer=bvbo4kax5k8ogc">RoundIcons.com</a>, or you can purchase the 1500 icon set <a href="https://getdpd.com/cart/hoplink/18076?referrer=bvbo4kax5k8ogc">here</a>.</p>
-          <ul class="list-inline">
-              <li>Date: July 2014</li>
-              <li>Client: Round Icons</li>
-              <li>Category: Graphic Design</li>
-          </ul>
-          <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
+          <img src="/images/lakenews-award.gif">
+          <a href="close"><i class="fa fa-times fa-4x" data-dismiss="modal"></i></a>
         </div>
       </div>
     </div>
@@ -185,39 +144,8 @@
     <div class="modal-dialog modal-lg">
       <div class="modal-content">
         <div class="modal-body">
-          <h2>Project Name five</h2>
-          <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
-          <img class="img-responsive img-centered" src="img/portfolio/roundicons-free.png" alt="">
-          <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
-          <p>
-              <strong>Want these icons in this portfolio item sample?</strong>You can download 60 of them for free, courtesy of <a href="https://getdpd.com/cart/hoplink/18076?referrer=bvbo4kax5k8ogc">RoundIcons.com</a>, or you can purchase the 1500 icon set <a href="https://getdpd.com/cart/hoplink/18076?referrer=bvbo4kax5k8ogc">here</a>.</p>
-          <ul class="list-inline">
-              <li>Date: July 2014</li>
-              <li>Client: Round Icons</li>
-              <li>Category: Graphic Design</li>
-          </ul>
-          <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <div class="modal fade modalSix" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
-    <div class="modal-dialog modal-lg">
-      <div class="modal-content">
-        <div class="modal-body">
-          <h2>Project Name six</h2>
-          <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
-          <img class="img-responsive img-centered" src="img/portfolio/roundicons-free.png" alt="">
-          <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
-          <p>
-              <strong>Want these icons in this portfolio item sample?</strong>You can download 60 of them for free, courtesy of <a href="https://getdpd.com/cart/hoplink/18076?referrer=bvbo4kax5k8ogc">RoundIcons.com</a>, or you can purchase the 1500 icon set <a href="https://getdpd.com/cart/hoplink/18076?referrer=bvbo4kax5k8ogc">here</a>.</p>
-          <ul class="list-inline">
-              <li>Date: July 2014</li>
-              <li>Client: Round Icons</li>
-              <li>Category: Graphic Design</li>
-          </ul>
-          <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
+          <img src="/images/talktown-award.jpg">
+          <a href="close"><i class="fa fa-times fa-4x" data-dismiss="modal"></i></a>
         </div>
       </div>
     </div>
