routing not working still

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -23,10 +23,10 @@
           <img class="pig-photo" src="/images/piggys-shadow.png">
         </div> -->
         <div class="col-lg-1 col-lg-offset-2">
-          HOME
+          <a href="/">HOME</a>
         </div>
         <div class="col-lg-1">
-          ABOUT US
+          <a href="/about">ABOUT US</a>
         </div>
         <div class="col-lg-1">
           BREAKFAST
