--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -23,28 +23,28 @@
           <img class="pig-photo" src="/images/piggys-shadow.png">
         </div> -->
         <div class="col-lg-1 col-lg-offset-2">
-          <a href="/">HOME</a>
+          <a class="no-deco" href="/">HOME</a>
         </div>
         <div class="col-lg-1">
-          <a href="/about">ABOUT US</a>
+          <a class="no-deco" href="/about">ABOUT US</a>
         </div>
         <div class="col-lg-1">
-          BREAKFAST
+          <a class="no-deco" href="/breakfast">BREAKFAST</a>
         </div>
         <div class="col-lg-1">
-          LUNCH
+          <a class="no-deco" href="/lunch">LUNCH</a>
         </div>
         <div class="col-lg-1">
-          ICE CREAM
+          <a class="no-deco" href="/ice-cream">ICE CREAM</a>
         </div>
         <div class="col-lg-1">
-          GIFT SHOP
+          <a class="no-deco" href="/giftshop">GIFT SHOP</a>
         </div>
         <div class="col-lg-1">
-          DIRECTIONS
+          <a class="no-deco" href="/directions">DIRECTIONS</a>
         </div>
         <div class="col-lg-1">
-          FEEDBACK
+          <a class="no-deco" href="/feedback">FEEDBACK</a>
         </div>
       </div>
 
