--- a/views/about.ejs
+++ b/views/about.ejs
@@ -1,3 +1,44 @@
-<div class="box">
-  Hiyo
+<div class="container-fluid about-bg">
+  <div class="row">
+    <section id="about-pic" data-type="background" data-speed="10" class="pages">
+        <article></a>
+    </section>
+  </div>
+
+  <div class="row">
+    <section id="about-text" data-type="background" data-speed="10" class="pages">
+        <article>PIGGY'S TALE</article>
+        <div class="piggys-tale">
+          <div class="col-lg-8 col-lg-offset-2 col-md-8 col-md-offset-2">
+            <div class="row">
+              Piggy's Restaurant was founded in 1985 with the goal of serving only the highest quality food, prepared with care, and served by a courteous and friendly wait-staff. We find our foods and ingredients by regularly attending food shows in search of the best possible products.
+            </div>
+
+            <div class="row">
+              A few of the quality foods we serve at this time are Hatfield Meats, Thomas English Muffins, Arnolds Brick Oven Breads, Smuckers Jellies, Lipton Teas, and Maxwell House Coffee.
+            </div>
+
+            <div class="row">
+              The coffee, juices, Coca-Cola sodas, hot chocolate, and water all taste good thanks to an on-site water treatment system that softens, triple-filters, UV purifies and PH balances the water.
+            </div>
+
+            <div class="row">
+              The fresh dairy products come from a local farmers' co-op with members who do not use bovine hormones on their herds.
+            </div>
+
+            <div class="row">
+              Some items are made using our own original recipes. Our pancakes are blended from fresh ingredients in small batches to ensure each pancake is like homemade. Our French and Batter toasts have pure vanilla extracts that give them unique flavor. We bake our complimentary blueberry muffins everyday with wild Canadian blueberries that are small and sweet. Some days we bake over a thousand muffins.
+            </div>
+
+            <div class="row">
+              The best part of Piggy's Restaurant is our staff. They are here to make your visit to our restaurant a pleasant experience, which we hope you will want to repeat. You, the customer, are the reason we work hard to present you with the best, and our staff will try to accommodate you whenever possible.
+            </div>
+
+            <div class="row">
+              THE OWNER AND STAFF THANK YOU FOR CHOOSING PIGGY'S RESTAURANT
+            </div>
+          </div>
+        </div>
+    </section>
+  </div>
 </div>
