--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title><%= title %></title>
     <link rel="stylesheet" href="/stylesheets/style.css">
+    <link rel="stylesheet" href="/stylesheets/about-us.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Francois+One" rel="stylesheet">
@@ -22,28 +23,28 @@
         <!-- <div class="photo-position col-lg-3 col-md-3 col-sm-3">
           <img class="pig-photo" src="/images/piggys-shadow.png">
         </div> -->
-        <div class="col-lg-1 col-lg-offset-2">
+        <div class="col-lg-1 col-md-1 col-sm-1 col-lg-offset-2 col-md-offset-2 col-sm-offset-2 nav-button">
           <a class="no-deco" href="/">HOME</a>
         </div>
-        <div class="col-lg-1">
+        <div class="col-lg-1 col-md-1 col-sm-1 nav-button">
           <a class="no-deco" href="/about">ABOUT US</a>
         </div>
-        <div class="col-lg-1">
+        <div class="col-lg-1 col-md-1 col-sm-1 nav-button">
           <a class="no-deco" href="/breakfast">BREAKFAST</a>
         </div>
-        <div class="col-lg-1">
+        <div class="col-lg-1 col-md-1 col-sm-1 nav-button">
           <a class="no-deco" href="/lunch">LUNCH</a>
         </div>
-        <div class="col-lg-1">
+        <div class="col-lg-1 col-md-1 col-sm-1 nav-button">
           <a class="no-deco" href="/ice-cream">ICE CREAM</a>
         </div>
-        <div class="col-lg-1">
+        <div class="col-lg-1 col-md-1 col-sm-1 nav-button">
           <a class="no-deco" href="/giftshop">GIFT SHOP</a>
         </div>
-        <div class="col-lg-1">
+        <div class="col-lg-1 col-md-1 col-sm-1 nav-button">
           <a class="no-deco" href="/directions">DIRECTIONS</a>
         </div>
-        <div class="col-lg-1">
+        <div class="col-lg-1 col-md-1 col-sm-1 nav-button">
           <a class="no-deco" href="/feedback">FEEDBACK</a>
         </div>
       </div>
