--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -9,6 +9,7 @@
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Francois+One" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Dancing+Script" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300" rel="stylesheet">
   </head>
   <body>
 
@@ -57,6 +58,15 @@
 
 
     <%- body %>
+    <footer>
+      <a href="mailto:piggysinfo@piggysrestaurant.com"><img class="footer-icon" src="images/email.png"></a>
+      <a href="https://www.facebook.com/PiggysRestaurant/"><img class="footer-icon" src="images/facebook.png"></a>
+      <a href="https://www.yelp.com/biz/piggys-restaurant-lake-harmony"><img class="footer-icon" src="images/yelp.png"></a>
+      <a href="https://www.tripadvisor.com/Restaurant_Review-g52962-d674211-Reviews-Piggy_s_Restaurant-Lake_Harmony_Pocono_Mountains_Region_Pennsylvania.html"><img class="footer-icon-right" src="images/trip-advisor.png"></a>
+
+      <span class="footer-text">HIGH QUALITY FOOD, CRAFTED WITH <i class="fa fa-heart" aria-hidden="true"></i> IN THE POCONOS</span>
+    </footer>
+    <div class="second-footer">&copy; Piggy's Restaurant. All Rights Reserved.</div>
     <script
     src="//code.jquery.com/jquery-3.1.1.min.js"
     integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
