--- a/public/stylesheets/about-us.css
+++ b/public/stylesheets/about-us.css
@@ -1,5 +1,6 @@
 .about-bg{
-  background-color:pink;
+  /*background-color:#ffbaba;*/
+  /*background-color:brown;*/
 }
 
 #about-pic{
@@ -24,7 +25,7 @@
   background-repeat:no-repeat;
   width:100vw;
   margin-top:-65px;
-  min-height:100vh;
+  /*min-height:100vh;*/
   opacity:1;
   position:relative;
 }
@@ -42,4 +43,11 @@
 .piggys-tale{
   padding-top:175px;
   text-align:center;
+  font-size: 20px;
+  font-family: 'Open Sans', sans-serif;
+  color:#a03131;
+}
+
+.about-paragraphs{
+  margin-bottom:40px;
 }
