--- a/views/about.ejs
+++ b/views/about.ejs
@@ -1,3 +1,6 @@
+<link rel="stylesheet" href="/stylesheets/about.css">
+
+
 <div class="container-fluid about-bg">
   <div class="row">
     <section id="about-pic" data-type="background" data-speed="10" class="pages">
