--- a/views/lunch.ejs
+++ b/views/lunch.ejs
@@ -1,1 +1,255 @@
-lunch
+<link rel="stylesheet" href="/stylesheets/menu.css">
+
+
+<div class="row menu-top">
+</div>
+
+<div class="container-fluid breakfast-background-color">
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-10 col-lg-offset-1">
+
+        <div class="row">
+          <div class="col-lg-12 menu-list">
+            <h1>OMELETTES</h1>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="menu-description">
+            Golden in color, light in texture, large 3 egg omelettes served with your choice of white, rye or whole wheat toast.
+          </div>
+        </div>
+
+        <div class="row list-options">
+          <ul>
+            <li>plain</li>
+            <li>mushroom</li>
+            <li>western</li>
+            <li>ham</li>
+            <li>bacon</li>
+            <li>sausage</li>
+          </ul>
+        </div>
+
+        <div class="row">
+          <div class="menu-description">
+            Extras: American Cheese - - White Cheddar Cheese - - Swiss cheese - - Fresh Mushrooms - - Tomatoes - - Onions
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+
+
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-10 col-lg-offset-1">
+
+        <div class="row">
+          <div class="col-lg-12 menu-list">
+            <h1>Farm fresh eggs</h1>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="menu-description">
+            Two farm fresh eggs served the way you like them. Sunny-side up, over or scrambled. Served with your choice of toasted Arnold’s white, whole-wheat or rye bread and Piggy’s own home fries.
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+
+
+
+
+
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-10 col-lg-offset-1">
+
+        <div class="row">
+          <div class="col-lg-12 menu-list">
+            <h1>homemade buttermilk pancakes</h1>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="menu-description">
+            Made fresh all day, in small batches, using our own special recipe with fresh buttermilk, flour, eggs and butter.
+          </div>
+        </div>
+
+        <div class="row list-options">
+          <ul>
+            <li>plain</li>
+            <li>blueberry</li>
+            <li>chocolate chip</li>
+          </ul>
+        </div>
+
+      </div>
+    </div>
+  </div>
+
+
+
+
+
+
+
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-10 col-lg-offset-1">
+
+        <div class="row">
+          <div class="col-lg-12 menu-list">
+            <h1>grilled toast</h1>
+          </div>
+        </div>
+
+        <div class="row list-options">
+          <ul>
+            <li>french toast</li>
+            <li>piggy's original batter toast</li>
+            <li>cinnamon swirl french toast</li>
+            <li>crunch batter toast*</li>
+          </ul>
+        </div>
+
+        <div class="row">
+          <div class="menu-description">
+            *Cinnamon glazed granola on Piggy’s original batter toast.
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+
+
+
+
+
+
+
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-10 col-lg-offset-1">
+
+        <div class="row">
+          <div class="col-lg-12 menu-list">
+            <h1>sample of batters</h1>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="menu-description">
+            Served with one buttermilk pancake of your choice, one piece of French toast and one piece of Piggy’s original batter toast.
+          </div>
+        </div>
+
+
+      </div>
+    </div>
+  </div>
+
+
+
+
+
+
+
+
+
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-10 col-lg-offset-1">
+
+        <div class="row">
+          <div class="col-lg-12 menu-list">
+            <h1>taste of sweetness</h1>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="menu-description">
+            Served with one piece of cinnamon swirl French toast and one piece of Piggy’s crunch batter toast.
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+
+
+
+
+
+
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-10 col-lg-offset-1">
+
+        <div class="row">
+          <div class="col-lg-12 menu-list">
+            <h1>meats</h1>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="menu-description">
+            Complete your breakfast with one of these delicious meats from Hatfield and Taylor
+          </div>
+        </div>
+
+        <div class="row list-options">
+          <ul>
+            <li>hatfield bacon</li>
+            <li>hatfield smoked ham</li>
+            <li>hatfield scrapple</li>
+            <li>hatfield sausage</li>
+            <li>taylor pork roll</li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </div>
+
+
+
+
+
+
+
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-10 col-lg-offset-1">
+
+        <div class="row">
+          <div class="col-lg-12 menu-list">
+            <h1>side orders</h1>
+          </div>
+        </div>
+
+        <div class="row list-options">
+          <ul>
+            <li>thomas english muffins</li>
+            <li>toast arnold's bread</li>
+            <li>arnold cinnamon raisin toast</li>
+            <li>kaiser roll</li>
+            <li>piggy's own home fries</li>
+            <li>hot oatmeal</li>
+            <li>cold cereal</li>
+            <li>danish</li>
+            <li>seasonal fruit</li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </div>
+
+</div>
