finished lunch menu

--- a/views/lunch.ejs
+++ b/views/lunch.ejs
@@ -11,56 +11,182 @@
 
         <div class="row">
           <div class="col-lg-12 menu-list">
-            <h1>OMELETTES</h1>
+            <h1>gourmet hamburgers</h1>
           </div>
         </div>
 
         <div class="row">
           <div class="menu-description">
-            Golden in color, light in texture, large 3 egg omelettes served with your choice of white, rye or whole wheat toast.
+            An All-American, juicy, thick hamburger available with lettuce, tomato, onion and pickles on a Kaiser roll with chips. 5 or 8 oz.
           </div>
         </div>
 
         <div class="row list-options">
           <ul>
-            <li>plain</li>
-            <li>mushroom</li>
-            <li>western</li>
+            <li>plain burger</li>
+            <li>cheese burger</li>
+            <li>pizza burger</li>
+            <li>bacon cheese burger</li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </div>
+
+
+
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-10 col-lg-offset-1">
+
+        <div class="row">
+          <div class="col-lg-12 menu-list">
+            <h1>philadelphia steak sandwiches</h1>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="menu-description">
+            The best in the Pocono’s! Only Choice top round used. You’ll love it! Available with hot peppers, fried onions and chips.
+          </div>
+        </div>
+
+        <div class="row list-options">
+          <ul>
+            <li>plain steak</li>
+            <li>cheese steak</li>
+            <li>pizza steak*</li>
+            <li>chicken steak</li>
+            <li>chicken cheese steak</li>
+          </ul>
+        </div>
+
+        <div class="row">
+          <div class="menu-description">
+            * Mozzarella cheese and sauce
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+
+
+
+
+
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-10 col-lg-offset-1">
+
+        <div class="row">
+          <div class="col-lg-12 menu-list">
+            <h1>cold sandwiches</h1>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="menu-description">
+            A generous Piggy’s size sandwich available on Italian white bread, seedless rye, whole wheat or a Kaiser roll. Available with lettuce, tomato, onion and chips.
+          </div>
+        </div>
+
+        <div class="row list-options">
+          <ul>
+            <li>hatfield smoked ham</li>
+            <li>turkey breast</li>
+            <li>egg salad</li>
+            <li>tuna salad</li>
+            <li>chicken salad</li>
+            <li>blt</li>
+            <li>pb&amp;j</li>
+          </ul>
+        </div>
+
+        <div class="row">
+          <div class="menu-description">
+            Extras: White American Cheese - - Hatfield Bacon - - French Fries
+          </div>
+        </div>
+
+      </div>
+    </div>
+  </div>
+
+
+
+
+
+
+
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-10 col-lg-offset-1">
+
+        <div class="row">
+          <div class="col-lg-12 menu-list">
+            <h1>hot sandwiches</h1>
+          </div>
+        </div>
+
+        <div class="row list-options">
+          <ul>
+            <li>b.b.q pork*</li>
+            <li>grilled cheese</li>
+            <li>breaded chicken fillet</li>
+            <li>breaded fish fillet</li>
+            <li>beef sabretts hot dog</li>
+          </ul>
+        </div>
+
+        <div class="row">
+          <div class="menu-description">
+            * Southern Style - pulled pork in a delicious BBQ sauce that you'll love!
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+
+
+
+
+
+
+
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-10 col-lg-offset-1">
+
+        <div class="row">
+          <div class="col-lg-12 menu-list">
+            <h1>piggy's house club</h1>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="menu-description">
+            Triple decker piled high. Served with Hatfield bacon, lettuce, tomato, chips and a pickle.
+          </div>
+        </div>
+
+        <div class="row list-options">
+          <ul>
+            <li>turkey</li>
+            <li>tuna</li>
             <li>ham</li>
-            <li>bacon</li>
-            <li>sausage</li>
+            <li>egg salad</li>
+            <li>chicken salad</li>
           </ul>
         </div>
 
-        <div class="row">
-          <div class="menu-description">
-            Extras: American Cheese - - White Cheddar Cheese - - Swiss cheese - - Fresh Mushrooms - - Tomatoes - - Onions
-          </div>
-        </div>
       </div>
     </div>
   </div>
 
 
 
-  <div class="container">
-    <div class="row">
-      <div class="col-lg-10 col-lg-offset-1">
-
-        <div class="row">
-          <div class="col-lg-12 menu-list">
-            <h1>Farm fresh eggs</h1>
-          </div>
-        </div>
-
-        <div class="row">
-          <div class="menu-description">
-            Two farm fresh eggs served the way you like them. Sunny-side up, over or scrambled. Served with your choice of toasted Arnold’s white, whole-wheat or rye bread and Piggy’s own home fries.
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
 
 
 
@@ -73,111 +199,29 @@
 
         <div class="row">
           <div class="col-lg-12 menu-list">
-            <h1>homemade buttermilk pancakes</h1>
+            <h1>hoagies</h1>
           </div>
         </div>
 
         <div class="row">
           <div class="menu-description">
-            Made fresh all day, in small batches, using our own special recipe with fresh buttermilk, flour, eggs and butter.
+            A king size treat! Pig out! Served with lettuce, tomato, onion, chips and a pickle.
           </div>
         </div>
 
         <div class="row list-options">
           <ul>
-            <li>plain</li>
-            <li>blueberry</li>
-            <li>chocolate chip</li>
-          </ul>
-        </div>
-
-      </div>
-    </div>
-  </div>
-
-
-
-
-
-
-
-  <div class="container">
-    <div class="row">
-      <div class="col-lg-10 col-lg-offset-1">
-
-        <div class="row">
-          <div class="col-lg-12 menu-list">
-            <h1>grilled toast</h1>
-          </div>
-        </div>
-
-        <div class="row list-options">
-          <ul>
-            <li>french toast</li>
-            <li>piggy's original batter toast</li>
-            <li>cinnamon swirl french toast</li>
-            <li>crunch batter toast*</li>
+            <li>ham</li>
+            <li>turkey</li>
+            <li>tuna</li>
+            <li>chicken salad</li>
+            <li>american cheese</li>
           </ul>
         </div>
 
         <div class="row">
           <div class="menu-description">
-            *Cinnamon glazed granola on Piggy’s original batter toast.
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-
-
-
-
-
-
-
-
-  <div class="container">
-    <div class="row">
-      <div class="col-lg-10 col-lg-offset-1">
-
-        <div class="row">
-          <div class="col-lg-12 menu-list">
-            <h1>sample of batters</h1>
-          </div>
-        </div>
-
-        <div class="row">
-          <div class="menu-description">
-            Served with one buttermilk pancake of your choice, one piece of French toast and one piece of Piggy’s original batter toast.
-          </div>
-        </div>
-
-
-      </div>
-    </div>
-  </div>
-
-
-
-
-
-
-
-
-
-  <div class="container">
-    <div class="row">
-      <div class="col-lg-10 col-lg-offset-1">
-
-        <div class="row">
-          <div class="col-lg-12 menu-list">
-            <h1>taste of sweetness</h1>
-          </div>
-        </div>
-
-        <div class="row">
-          <div class="menu-description">
-            Served with one piece of cinnamon swirl French toast and one piece of Piggy’s crunch batter toast.
+            Extras: White American Cheese - - Hatfield Bacon - - French Fries
           </div>
         </div>
       </div>
@@ -196,7 +240,7 @@
 
         <div class="row">
           <div class="col-lg-12 menu-list">
-            <h1>meats</h1>
+            <h1>soups &amp; salads</h1>
           </div>
         </div>
 
@@ -208,48 +252,38 @@
 
         <div class="row list-options">
           <ul>
-            <li>hatfield bacon</li>
-            <li>hatfield smoked ham</li>
-            <li>hatfield scrapple</li>
-            <li>hatfield sausage</li>
-            <li>taylor pork roll</li>
+            <li>garden salad</li>
+            <li>tuna salad</li>
+            <li>egg salad</li>
+            <li>chicken salad</li>
+            <li>chef's salad*</li>
+            <li>chili**</li>
           </ul>
         </div>
-      </div>
-    </div>
-  </div>
-
-
-
-
-
-
-
-  <div class="container">
-    <div class="row">
-      <div class="col-lg-10 col-lg-offset-1">
 
         <div class="row">
-          <div class="col-lg-12 menu-list">
-            <h1>side orders</h1>
+          <div class="menu-description">
+            *  Turkey, Ham &amp; American Cheese
+            <br>
+            ** Winter Only
           </div>
         </div>
 
-        <div class="row list-options">
-          <ul>
-            <li>thomas english muffins</li>
-            <li>toast arnold's bread</li>
-            <li>arnold cinnamon raisin toast</li>
-            <li>kaiser roll</li>
-            <li>piggy's own home fries</li>
-            <li>hot oatmeal</li>
-            <li>cold cereal</li>
-            <li>danish</li>
-            <li>seasonal fruit</li>
-          </ul>
+        <div class="row">
+          <div class="menu-description">
+            Dressings: Ranch - - French - - Thousand Island - - Blue Cheese - - Italian
+          </div>
         </div>
+
       </div>
     </div>
   </div>
+
+
+
+
+
+
+
 
 </div>
