--- a/views/breakfast.ejs
+++ b/views/breakfast.ejs
@@ -1,7 +1,8 @@
 <link rel="stylesheet" href="/stylesheets/menu.css">
 
-
+<div class="container-fluid">
 <div class="row menu-top">
+</div>
 </div>
 
 <div class="container-fluid breakfast-background-color">
