--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -13,16 +13,14 @@
   <body>
 
     <!-- NAVIGATION BAR -->
-    <div class="container-fluid">
+    <div class="container-fluid desktop-menu">
       <div class="row navbar">
           <img class="navbar-photo img-responsive" src="/images/navbar-photo.png">
       </div>
 
 
       <div class="row navbar-links">
-        <!-- <div class="photo-position col-lg-3 col-md-3 col-sm-3">
-          <img class="pig-photo" src="/images/piggys-shadow.png">
-        </div> -->
+
         <div class="col-lg-1 col-md-1 col-sm-1 col-lg-offset-2 col-md-offset-2 col-sm-offset-2 nav-button">
           <a class="no-deco" href="/">HOME</a>
         </div>
@@ -48,10 +46,42 @@
           <a class="no-deco" href="/feedback">FEEDBACK</a>
         </div>
       </div>
-
     </div>
 
 
+
+
+
+  <!-- <div class="mobile-menu">
+    <div class="row navbar">
+        <img class="mobile-navbar-photo img-responsive" src="/images/piggys-restaurant.png">
+    </div>
+
+  <p>
+    <button class="toggle-menu" type="button" data-toggle="collapse" data-target="#collapseExample" aria-expanded="true" aria-controls="collapseExample">
+      <span class="sr-only">Toggle navigation</span>
+      Menu <i class="fa fa-bars"></i>
+    </button>
+  </p>
+  <div class="collapse" id="collapseExample">
+    <div class="card card-block">
+      <ul class="nav navbar-nav ">
+        <li>
+          <a href="#about">About</a>
+        </li>
+        <li>
+          <a href="#portfolio">Portfolio</a>
+        </li>
+        <li>
+          <a href="#contact">Contact</a>
+        </li>
+        <li>
+           <a href="https://drive.google.com/file/d/0B018ui5zoEoWN1N2TnBRcHZKcUE/view?usp=sharing">R&Eacute;sum&Eacute;</a>
+        </li>
+      </ul>
+    </div>
+  </div>
+</div> -->
 
 
 
