--- a/views/lunch.ejs
+++ b/views/lunch.ejs
@@ -1,7 +1,9 @@
 <link rel="stylesheet" href="/stylesheets/menu.css">
 
 
-<div class="row menu-top">
+<div class="container-fluid">
+  <div class="row menu-top">
+  </div>
 </div>
 
 <div class="container-fluid breakfast-background-color">
@@ -278,12 +280,5 @@
       </div>
     </div>
   </div>
-
-
-
-
-
-
-
 
 </div>
