--- a/public/stylesheets/about.css
+++ b/public/stylesheets/about.css
@@ -7,7 +7,7 @@
   background: url(/images/piggys.jpg) 50% 0 repeat fixed; max-height: 100vh;
   min-height: 700px;
   margin: 0 auto;
-  width: 100vw;
+  /*width: 100vw;*/
   max-width: 1920px;
   position: relative;
 }
@@ -23,7 +23,7 @@
 #about-text{
   background-image: url(/images/cricut-edge.png);
   background-repeat:no-repeat;
-  width:100vw;
+  width:100%;
   margin-top:-65px;
   /*min-height:100vh;*/
   opacity:1;
