--- a/views/breakfast.ejs
+++ b/views/breakfast.ejs
@@ -1,11 +1,11 @@
 <link rel="stylesheet" href="/stylesheets/menu.css">
 
-<div class="container-fluid">
-<div class="row menu-top">
-</div>
-</div>
-
 <div class="container-fluid breakfast-background-color">
+  <div class="row menu-top">
+  </div>
+
+
+<!-- <div class="container"> -->
   <div class="container">
     <div class="row">
       <div class="col-lg-10 col-lg-offset-1">
@@ -253,4 +253,7 @@
     </div>
   </div>
 
+<!-- </div> -->
+
+<!-- this is the one to delete below -->
 </div>
