--- a/views/directions.ejs
+++ b/views/directions.ejs
@@ -1,1 +1,44 @@
-direction
+<link rel="stylesheet" href="/stylesheets/directions.css">
+
+<div class="container-fluid">
+
+
+    <div class="row" id="map"></div>
+        <script>
+          function initMap() {
+            var restaurant = {lat: 41.060623, lng: -75.591204};
+            var map = new google.maps.Map(document.getElementById('map'), {
+              zoom: 16,
+              scrollwheel: false,
+              center: restaurant
+            });
+
+            var contentString = '<div id="content">'+
+              '</div>'+
+              '<h1>Piggys Restaurant</h1>'+
+              '<div id="bodyContent">'+
+              '<a href="https://www.google.com/maps/place/Piggys/@41.0606239,-75.5912084,15z/data=!4m5!3m4!1s0x0:0x79cae1ba6ee94246!8m2!3d41.0606239!4d-75.5912084"><p>Directions to: 16 N Lakeshore Dr, Lake Harmony, PA 18624</p></a>'+
+              '</div>'+
+              '</div>';
+
+            var infowindow = new google.maps.InfoWindow({
+              content: contentString
+            });
+
+            var marker = new google.maps.Marker({
+              position: restaurant,
+              map: map,
+              title: 'Uluru (Ayers Rock)'
+            });
+            marker.addListener('click', function() {
+              infowindow.open(map, marker);
+            });
+          }
+        </script>
+
+
+        <script async defer
+        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCDbonUFD0KILkQUvaHKwGtf-JqHV9XBVU&callback=initMap">
+        </script>
+
+</div>
