--- a/public/stylesheets/about.css
+++ b/public/stylesheets/about.css
@@ -45,7 +45,7 @@
   text-align:center;
   font-size: 20px;
   font-family: 'Open Sans', sans-serif;
-  color:#a03131;
+  /*color:#a03131;*/
 }
 
 .about-paragraphs{
