--- a/views/directions.ejs
+++ b/views/directions.ejs
@@ -41,4 +41,26 @@
         src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCDbonUFD0KILkQUvaHKwGtf-JqHV9XBVU&callback=initMap">
         </script>
 
+
+
+        <div class="row directions">
+
+          <span class="header-text">Contact us at:</span>
+          <p>Paul and Bette Davidson</p>
+          <p>PO Box 565</p>
+          <p>N Lake Dr and S. Lake Dr</p>
+          <p>Lake Harmony PA 18624</p>
+          <p>(570) 722-8493</p>
+
+          <p>GPS settings: 91 N. Lake Drive, Lake Harmony, PA</p>
+
+          <span class="header-text">Directions:</span>
+
+          <p>From I-476 North or South (PA Turnpike Northeast Extension): Take exit 95, Pocono, and turn left onto Rt. 940 East. *At the first light (approx. 3 miles) take a right onto Moseywood Road at Split Rock Resort. You will have to pay a one dollar ($1.00) toll to drive through Split Rock. After you pass the Galleria (a hotel) make the next right onto Birchwood Rd. As you pass the miniature golf course and park, follow the road to the right. Once you drive through the second tollgate (no toll on this end) we're another mile ahead on Lake Drive, past Nick's Lake House.</p>
+
+          <p>From I-80 East: Take exit 277, Lake Harmony, to the light at Rt. 940. Take a Right onto Rt. 940 East. Then follow directions for Turnpike from asterisk(*).</p>
+
+          <p>From I-80 West: Take exit 284, Blakeslee, and turn left onto Rt. 115. After 3 miles, take a Right onto Rt. 903. Another 3 miles will bring you to Big Boulder Mountain Road (which is known as Lake Drive at the other end). Follow Lake Drive to the stop sign at Piggy's in Lake Harmony!</p>
+        </div>
+
 </div>
